# REDRIVER2

./: .gitignore  .gitmodules  README.md  appveyor.yml  windows_dev_prepare.ps1
.appveyor/: AfterBuild.sh  Build.bat  Build.sh  Install.sh
.build/: CMakeLists.txt
data/: .gitignore
src/: redriver2_psxpc.cpp
src/Game/: dr2locale.c  dr2locale.h  dr2types.h  driver2.h  platform.h  psyx_compat.h
src/Game/ASM/: d2mapasm.c
src/Game/C/: cars.c  civ_ai.c  cutrecorder.c  dr2roads.c  draw.c  event.c  event.h  glaunch.c  handling.c  loadsave.c  loadview.c  main.c  mission.c  models.c  motion_c.c  objcoll.c  overlay.c  pause.c  pres.c  shadow.c  shadow.h  sound.c  sound.h  spool.c  sysclock.c  system.c  system.h  targets.c  tile.c  xaplay.c  xmplay.c  xmplay.h
src/Game/engine/: mdl.h
src/utils/: discord.cpp  discord.h  riff.cpp
src/utils/video_source/: VideoPlayer.cpp
src_rebuild/Game/: psyx_compat.h
src_rebuild/Game/C/: main.c
src_rebuild/utils/: ini.c  targa.cpp
src_rebuild/utils/video_source/: VideoPlayer.cpp
